--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
       padding: 15px;
       background: rgba(0, 0, 0, 0.6);
       border-radius: 10px;
-      width: min(400px, 80%);
       display: flex;
       flex-direction: column;
       gap: 10px;
@@ -111,12 +110,39 @@
       position: fixed;
       top: 50%;
       left: 50%;
+      align-items: center;
       transform: translate(-50%, -50%);
-      font-size: 2rem;
       background: rgba(0, 0, 0, 0.8);
-      padding: 20px;
+      padding: 50px;
       border-radius: 10px;
       display: none;
+      min-width: 50%;
+    }
+
+    .message-display {
+      font-size: 2rem;
+      background: none;
+      color: white;
+      text-align: center;
+    }
+
+    #win-time {
+      font-size: 3rem;
+      background: none;
+      color: white;
+      text-align: center;
+    }
+
+    #win-buttons {
+      display: flex;
+      justify-content: space-between;
+      width: 100%;
+      gap: 20px;
+      cursor: pointer;
+    }
+
+    .win-buttons:hover {
+      text-decoration: underline;
     }
 
     .win-message.show {
@@ -140,7 +166,14 @@
   </div>
   <div class="game-container" id="game"></div>
   <div class="cursor" id="cursor"></div>
-  <div class="win-message" id="winMessage">You Win!</div>
+  <div class="win-message" id="winMessage">
+    <div class="message-display">You win!</div>
+    <div id="win-time">--:--:--</div>
+    <div id="win-buttons">
+      <div class="win-buttons"id="retry-button">Retry</div>
+      <div class="win-buttons"id="next-button">Next</div>
+    </div>
+  </div>
 
   <script>
     class SeededRandom {
@@ -160,7 +193,7 @@
 
     class TileFlipGame {
       constructor(gridSize = 5) {
-        this.GRID_SIZES = [3, 4, 5, 6, 7, 9, 11, 15, 20];
+        this.GRID_SIZES = [3, 4, 5, 6, 7, 9, 11, 13, 15, 20];
         this.gridSize = gridSize;
         this.gameContainer = document.getElementById('game');
         this.cursor = document.getElementById('cursor');
