Huge update, I should prob start making real names

--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
 </head>
 
 <body>
+  <div class="game-sidebar2">
+    <h2>Bookmarks</h2>
+    <div class="bookmark-selector" id="bookmarkSelector">
+      <!-- Buttons will be added here by JavaScript -->
+    </div>
+  </div>
+
   <div class="game-sidebar">
     <h2>Grid Size</h2>
     <div class="size-selector" id="sizeSelector">
