--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Flippy Tile</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="icon" type="image/x-icon" href="icon.png">
+  <link rel="stylesheet" href="public/style.css">
+  <link rel="icon" type="image/x-icon" href="public/assets/icon.png">
 </head>
 
 <body>
   <div class="game-sidebar2">
     <h2>Bookmarks</h2>
+    <div id="new-bookmark-btn"class="bookmark-btn">+</div>
     <div class="bookmark-selector" id="bookmarkSelector">
       <!-- Buttons will be added here by JavaScript -->
     </div>
@@ -19,6 +20,7 @@
 
   <div class="game-sidebar">
     <h2>Grid Size</h2>
+    <div id="new-size-btn"class="size-btn">+</div>
     <div class="size-selector" id="sizeSelector">
       <!-- Buttons will be added here by JavaScript -->
     </div>
@@ -57,7 +59,7 @@
     </div>
   </div>
 
-  <script src="game.js"></script>
+  <script src="public/game.js"></script>
 </body>
 
 </html>
