--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
 </head>
 
 <body>
+  <div class="info">
+    <a id="github" href="https://github.com/CoolStop-Studio/Flippy-Tile" target="_blank">
+      <img src="public/assets/github.png" alt="GitHub">
+    </a>
+    <div id="version">v1.0</div> <!-- Replace with dynamic version if needed -->
+  </div>
+
   <div class="game-sidebar2">
     <h2>Bookmarks</h2>
     <div id="new-bookmark-btn"class="bookmark-btn">+</div>
