--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Flippy Tile</title>
-  <link rel="stylesheet" href="public/style.css">
-  <link rel="icon" type="image/x-icon" href="public/assets/icon.png">
+  <link rel="stylesheet" href="src/style.css">
+  <link rel="icon" type="image/x-icon" href="src/assets/icon.png">
 </head>
 
 <body>
   <div class="info">
     <a id="github" href="https://github.com/CoolStop-Studio/Flippy-Tile" target="_blank">
-      <img src="public/assets/github.png" alt="GitHub">
+      <img src="src/assets/github.png" alt="GitHub">
     </a>
     <div id="version">v1.0</div> <!-- Replace with dynamic version if needed -->
   </div>
@@ -66,7 +66,7 @@
     </div>
   </div>
 
-  <script src="public/game.js"></script>
+  <script src="src/game.js"></script>
 </body>
 
 </html>
