organization and setup for new bookmark system

--- a/index.html
+++ b/index.html
@@ -17,39 +17,39 @@
     <div id="version">v???</div>
   </div>
 
-  <div class="right-sidebar">
+  <div id="right-sidebar">
 
     <div class="bookmarks"> <!-- bookmark bar -->
       <h2>Bookmarks</h2>
-      <div id="new-bookmark-btn"class="tile-btn bookmark-btn">+</div>
+      <div id="new-bookmark-btn"class="bookmark-btn">+</div>
       <div class="bookmark-selector" id="bookmarkSelector">
         <!-- bookmarks added here by JS -->
       </div>
     </div>
 
-    <div class="edit"> <!-- bookmark bar -->
+    <div id="edit-bookmark"> <!-- bookmark bar -->
       <h2>Edit</h2>
       
-      <input placeholder="Name" class="editnew-input"></input>
-      <input placeholder="Seed" class="editnew-input"></input>
-      <button class="editnew-btn">Rename</button>
-      <button class="editnew-btn">DELETE</button>
+      <input placeholder="Name" class="editcreate-input"></input>
+      <input placeholder="Seed" class="editcreate-input"></input>
+      <button class="editcreate-btn">Rename</button>
+      <button class="editcreate-btn">DELETE</button>
     </div>
 
-    <div class="new"> <!-- bookmark bar -->
+    <div id="create-bookmark"> <!-- bookmark bar -->
       <h2>New</h2>
       
-      <input placeholder="Name" class="editnew-input"></input>
-      <input placeholder="Seed (Leave blank for current)" class="editnew-input"></input>
-      <button class="editnew-btn">CREATE</button>
+      <input placeholder="Name" class="editcreate-input"></input>
+      <input placeholder="Seed (Leave blank for current)" class="editcreate-input"></input>
+      <button class="editcreate-btn">CREATE</button>
     </div>
 
   </div>
 
-  <div class="left-sidebar"> <!-- size selection bar -->
+  <div id="left-sidebar"> <!-- size selection bar -->
     <div class="size"> <!-- size selection bar -->
       <h2>Grid Size</h2>
-      <div id="new-size-btn"class="tile-btn size-btn">+</div>
+      <div id="new-size-btn"class="size-btn">+</div>
       <div class="size-selector" id="sizeSelector">
         <!-- sizes added here by JS -->
       </div>
